--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="gameplays">
                 <h3>Silent Hill 2 Remake</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=D9sxTGlG7hc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/D9sxTGlG7hc?si=b-pNLW_iDULUTbJe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="gameplays">
