--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 
         </section>
         <section id="gameplays">
-            <h2>GameHub</h2>
-
+            <h2>Gameplay</h2>
             <div class="gameplays">
                 <h3>Silent Hill 2 Remake</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/D9sxTGlG7hc?si=b-pNLW_iDULUTbJe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -76,22 +75,22 @@
 
             <div class="gameplays">
                 <h3>Sonic x Shadow Generations</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Qk3812IiRaU?si=5iWgJSNRCnsnUaZx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="gameplays">
                 <h3>Dragon Ball Sparking!</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HH727kgIcXQ?si=WPAcgcUsQYrxFf_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="gameplays">
                 <h3>Assassin's Creed: Shadows</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZCIZWireiRU?si=tu9FZVauWTScSllX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="gameplays">
                 <h3>Star Wars Outlaws</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wAkihJRKun4?si=mldksGdWvcOyTPlN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
         </section>
