--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <div class="gameplays">
                 <h3>Star Wars Outlaws</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wAkihJRKun4?si=mldksGdWvcOyTPlN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wAkihJRKun4?si=BBz71QPqFYQYhEp5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
         </section>
