--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 
             </ul>
         </nav>
-    </header>
-    
+    </header>]
     <main>
         <section id="index">
             <h2>Home</h2>
