--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <section id="reviews2">
             <h2>Bem-vindo à seção de Reviews</h2>
             <div
-            class="1"
-            <h1>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h1></div>
+            class="Aqui"
+            <h1>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h1>
+        </div>
             <h2>Reviews</h2>
             <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
