--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
         <section id="index">
             <h2>Home</h2>
 
-            <h4> 
-                <p>No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
-                    Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!</p>
-            </h4>
+            <h2> No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
+                Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!
+            </h2>
 
         </section>
         <section id="reviews2">
