--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </header>]
     <main>
         <section id="index">
-            <h2>Home</h2>
+            <h2>Bem-vindo! Ao GameHub.</h2>
 
-            <h2> No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
+            <h4> No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
                 Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!
-            </h2>
+            </h4>
 
         </section>
         <section id="reviews2">
