--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <section id="index">
             <h1>Bem-vindo! Ao GameHub.</h1>
 
-            <h3> No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
-                Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!
+            <h3> 
+                <p>No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
+                Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!</p>
             </h3>
 
         </section>
