--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
             <h3> 
                 <p>No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
-                Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!</p>
+                    análises e gameplays dos jogos mais emocionantes do momento.
+                    Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!</p>
             </h3>
 
         </section>
