Correção codigo base

--- a/index.html
+++ b/index.html
@@ -15,27 +15,21 @@
                 <li><a href="#index">Home</a></li>
                 <li><a href="#reviews2">Reviews</a></li>
                 <li><a href="#gameplays">Gameplays</a></li>
-                
             </ul>
         </nav>
-    </header>]
+    </header>
     <main>
         <section id="index">
             <h1>Bem-vindo! Ao GameHub.</h1>
-
             <h3> 
-                <p>No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento.
-                    análises e gameplays dos jogos mais emocionantes do momento.
-                    Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!</p>
+                <p>No GameHub, você encontra as últimas novidades, análises e gameplays dos jogos mais emocionantes do momento. Se você é um fã de jogos, este é o lugar certo para se manter atualizado e descobrir novos títulos!</p>
             </h3>
-
         </section>
         <section id="reviews2">
             <h2>Bem-vindo à seção de Reviews</h2>
-            <div
-            class="Aqui"
-            <h1>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h1>
-        </div>
+            <div class="Aqui">
+                <h1>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h1>
+            </div>
             <h2>Reviews</h2>
             <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
@@ -71,7 +65,6 @@
                 <p>Star Wars Outlaws coloca os jogadores no papel de um contrabandista em uma galáxia distante, oferecendo uma nova perspectiva sobre o universo de Star Wars. A jogabilidade é envolvente e repleta de ação.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
-
         </section>
         <section id="gameplays">
             <h2>Gameplay</h2>
@@ -99,14 +92,11 @@
                 <h3>Star Wars Outlaws</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wAkihJRKun4?si=BBz71QPqFYQYhEp5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-
         </section>
     </main>
-
     <footer>
-        <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Seu Nome. Todos os direitos reservados.</p>
     </footer>
-    
     <script src="JavaScript.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
