--- a/index.html
+++ b/index.html
@@ -29,4 +29,19 @@
             </div>
             <div class="review">
                 <img src="./images/jogo2.jpg" alt="Jogo 2">
-                <h3>Review
+                <h3>Review do Jogo 2</h3>
+                <p>Descrição breve do Jogo 2.</p>
+            </div>
+            <div class="review">
+                <img src="./images/jogo3.jpg" alt="Jogo 3">
+                <h3>Review do Jogo 3</h3>
+                <p>Descrição breve do Jogo 3.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 GameHub. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
