--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameHub</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que o caminho está correto -->
+    <link rel="stylesheet" href="Estilo.css"> <!-- Certifique-se de que o caminho está correto -->
 </head>
 <body>
     <header>
