--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <ul>
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Reviews</a></li>
-                <li><a href="#">Gameplays</a></li>
             </ul>
         </nav>
     </header>
@@ -23,17 +22,17 @@
     <section id="reviews2">
         <div class="review-container">
             <div class="review">
-                <img src="./images/jogo1.jpg" alt="Jogo 1">
+                <img src="./images/assassin_creed.jpg" alt="Assassin Creed Shadow">
                 <h3>Review do Jogo 1</h3>
                 <p>Descrição breve do Jogo 1.</p>
             </div>
             <div class="review">
-                <img src="./images/jogo2.jpg" alt="Jogo 2">
+                <img src="./images/dragon_ball.jpg" alt="Dragon Ball Sparking Zero">
                 <h3>Review do Jogo 2</h3>
                 <p>Descrição breve do Jogo 2.</p>
             </div>
             <div class="review">
-                <img src="./images/jogo3.jpg" alt="Jogo 3">
+                <img src="./images/star_wars.jpg" alt="Star Wars Outlaws">
                 <h3>Review do Jogo 3</h3>
                 <p>Descrição breve do Jogo 3.</p>
             </div>
