--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameHub</title>
-    <link rel="stylesheet" href="Estilo.css">
+    <link rel="stylesheet" href="Estilo.css"> <!-- Certifique-se de que o caminho está correto -->
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><a href="#">Downloads</a></li>
+                <li><a href="#">Reviews</a></li>
             </ul>
         </nav>
     </header>
@@ -21,23 +21,21 @@
 
     <section id="downloads">
         <div class="review-container">
-            <div class="review">
+            <div class="downloads">
                 <img src="./images/assassin_creed.jpg" alt="Assassin Creed Shadows">
                 <h3>Assassin's Creed Shadows</h3>
                 <p>Baixe e jogue o novo Assassin's Creed.</p>
                 <a href="downloads/assassins-creed-shadows.zip" class="download-button" download>Download</a>
             </div>
-            <div class="review">
+            <div class="downloads">
                 <img src="./images/dragon_ball.jpg" alt="Dragon Ball Sparking Zero">
-                <h3>Dragon Ball Sparking! Zero</h3>
-                <p>Prepare-se para lutas épicas!</p>
-                <a href="downloads/dragon-ball-sparking-zero.zip" class="download-button" download>Download</a>
+                <h3>Review do Jogo 2</h3>
+                <p>Descrição breve do Jogo 2.</p>
             </div>
-            <div class="review">
+            <div class="downloads">
                 <img src="./images/star_wars.jpg" alt="Star Wars Outlaws">
-                <h3>Star Wars Outlaws</h3>
-                <p>Explore o universo de Star Wars.</p>
-                <a href="downloads/star-wars-outlaws.zip" class="download-button" download>Download</a>
+                <h3>downloads do Jogo 3</h3>
+                <p>Descrição breve do Jogo 3.</p>
             </div>
         </div>
     </section>
