--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
             </div>
             <div class="downloads">
                 <img src="./images/dragon_ball.jpg" alt="Dragon Ball Sparking Zero">
-                <h3>Review do Jogo 2</h3>
-                <p>Descrição breve do Jogo 2.</p>
+                <h3>Dragon Ball Sparking! Zero</h3>
+                <p>Prepare-se para lutas épicas!</p>
+                <a href="downloads/dragon-ball-sparking-zero.zip" class="download-button" download>Download</a>
             </div>
             <div class="downloads">
                 <img src="./images/star_wars.jpg" alt="Star Wars Outlaws">
-                <h3>downloads do Jogo 3</h3>
-                <p>Descrição breve do Jogo 3.</p>
+                <h3>Star Wars Outlaws</h3>
+                <p>Explore o universo de Star Wars.</p>
+                <a href="downloads/star-wars-outlaws.zip" class="download-button" download>Download</a>
             </div>
         </div>
     </section>
