--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameHub</title>
-    <link rel="stylesheet" href="Estilo.css"> <!-- Certifique-se de que o caminho está correto -->
+    <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><a href="#">Reviews</a></li>
+                <li><a href="#">Downloads</a></li>
             </ul>
         </nav>
     </header>
