--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <button type="submit">Entrar</button>
         </form>
     </section>
-    
-    <section id="downloads">
+
+    <section id="downloads-section" style="display: none;">
         <div class="review-container">
             <div class="downloads">
                 <img src="./images/assassin_creed.jpg" alt="Assassin Creed Shadows">
