--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
             </ul>
         </nav>
     </header>
+
     <section id="login-screen">
-        <form id="login-form">
-            <label for="username">Usuário:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Entrar</button>
-        </form>
+        <div class="login-container">
+            <h2>Entrar no GameHub</h2>
+            <form id="login-form">
+                <div class="input-group">
+                    <label for="username">Usuário</label>
+                    <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Senha</label>
+                    <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+                </div>
+                <button type="submit">Entrar</button>
+            </form>
+        </div>
     </section>
 
     <section id="downloads-section" style="display: none;">
