--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     
 <!-- Tela de Criação de Conta -->
-<section id="signup-screen">
+<section id="signup-screen" class="screen">
     <div class="signup-container">
         <h2>Criar Conta no GameHub</h2>
         <form id="signup-form">
@@ -29,14 +29,15 @@
             <div class="input-group">
                 <label for="signup-password">Senha</label>
                 <input type="password" id="signup-password" name="signup-password" placeholder="Escolha uma senha" required>
+                <span id="show-signup-password" class="show-password">👁️</span>
             </div>
             <button type="submit">Criar Conta</button>
         </form>
     </div>
 </section>
 
-<!-- Tela de Login -->
-<section id="login-screen">
+ <!-- Tela de Login -->
+ <section id="login-screen" class="screen">
     <div class="login-container">
         <h2>Entrar no GameHub</h2>
         <form id="login-form">
@@ -47,6 +48,7 @@
             <div class="input-group">
                 <label for="password">Senha</label>
                 <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+                <span id="show-password" class="show-password">👁️</span>
             </div>
             <button type="submit">Entrar</button>
             <p><a href="#" id="go-to-signup">Criar Conta</a></p> <!-- Link para a criação de conta -->
@@ -54,6 +56,7 @@
     </div>
 </section>
 
+  <!-- Aba de Downloads (apenas visível quando o login for bem-sucedido) -->
     <section id="downloads-section" style="display: none;">
         <div class="review-container">
             <div class="downloads">
@@ -80,5 +83,7 @@
     <footer>
         <p>&copy; 2025 GameHub. Todos os direitos reservados.</p>
     </footer>
+
+    <script src="Java Script.js"></script>
 </body>
 </html>
