--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     </div>
 </section>
 
+<section>
+    <button type="submit">Criar Conta</button>
+    <p><a href="#" id="go-to-login">Voltar ao Login</a></p>
+</section>
+
+
  <!-- Tela de Login -->
  <section id="login-screen" class="screen">
     <div class="login-container">
