--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameHub</title>
+    <title>ZipZap</title>
     <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <header>
-        <h1>GameHub</h1>
+        <h1>ZipZap</h1>
         <nav>
             <ul>
                 <li><a href="#" id="login-link">Login</a></li> <!-- Link do Login -->
@@ -20,7 +20,7 @@
 <!-- Tela de Criação de Conta -->
 <section id="signup-screen" class="screen">
     <div class="signup-container">
-        <h2>Criar Conta no GameHub</h2>
+        <h2>Criar Conta no ZipZap</h2>
         <form id="signup-form">
             <div class="input-group">
                 <label for="signup-username">Usuário</label>
