--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Tela de Login (apenas visível após criar a conta) -->
     <section id="login-screen" class="screen" style="display: none;">
         <div class="login-container">
-            <h2 id="title">Entrar no GameHub</h2>
+            <h2 id="title">Entrar no ZipZap</h2>
             <form id="login-form">
                 <div class="input-group">
                     <label for="username">Usuário</label>
