--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>ZipZap</h1>
         <nav>
             <ul>
-                <li><a href="#" id="login-link">Login</a></li> <!-- Link do Login -->
+                <li><a href="#" id="login-link">Login</a></li>
                 <li><a href="#">Downloads</a></li>
             </ul>
         </nav>
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-    <!-- Tela de Login (apenas visível após criar a conta) -->
+    <!-- Tela de Login -->
     <section id="login-screen" class="screen" style="display: none;">
         <div class="login-container">
             <h2 id="title">Entrar no ZipZap</h2>
@@ -53,10 +53,6 @@
                 <button type="submit">Entrar</button>
             </form>
         </div>
-    </section>
-
-    <section>
-        <p><a href="#" id="go-to-login">Voltar ao Login</a></p>
     </section>
 
     <!-- Aba de Downloads (apenas visível quando o login for bem-sucedido) -->
@@ -84,9 +80,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 ZipZap. Todos os direitos reservados.</p>
+        <p>&copy; 2025 GameHub. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="Java Script.js"></script>
+    <script src="JavaScript.js"></script>
 </body>
 </html>
