--- a/index.html
+++ b/index.html
@@ -11,52 +11,13 @@
         <h1>ZipZap</h1>
         <nav>
             <ul>
-                <li><a href="#" id="login-link">Login</a></li>
                 <li><a href="#">Downloads</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Tela de Criação de Conta -->
-    <section id="signup-screen" class="screen">
-        <div class="signup-container">
-            <h2 id="title">Criar Conta no GameHub</h2>
-            <form id="signup-form">
-                <div class="input-group">
-                    <label for="signup-username">Usuário</label>
-                    <input type="text" id="signup-username" name="signup-username" placeholder="Escolha seu usuário" required>
-                </div>
-                <div class="input-group">
-                    <label for="signup-password">Senha</label>
-                    <input type="password" id="signup-password" name="signup-password" placeholder="Escolha uma senha" required>
-                    <span id="show-signup-password" class="show-password">👁️</span>
-                </div>
-                <button type="submit">Criar Conta</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Tela de Login -->
-    <section id="login-screen" class="screen" style="display: none;">
-        <div class="login-container">
-            <h2 id="title">Entrar no ZipZap</h2>
-            <form id="login-form">
-                <div class="input-group">
-                    <label for="username">Usuário</label>
-                    <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
-                </div>
-                <div class="input-group">
-                    <label for="password">Senha</label>
-                    <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
-                    <span id="show-password" class="show-password">👁️</span>
-                </div>
-                <button type="submit">Entrar</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Aba de Downloads (apenas visível quando o login for bem-sucedido) -->
-    <section id="downloads-section" style="display: none;">
+    <!-- Aba de Downloads (visível diretamente) -->
+    <section id="downloads-section">
         <div class="review-container">
             <div class="downloads">
                 <img src="./images/assassin_creed.jpg" alt="Assassin Creed Shadows">
@@ -80,9 +41,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 GameHub. Todos os direitos reservados.</p>
+        <p>&copy; 2025 ZipZap. Todos os direitos reservados.</p>
     </footer>
-
-    <script src="JavaScript.js"></script>
 </body>
 </html>
